Whoops homepage fixed

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -34,7 +34,7 @@
         
         <a href="https://people.rit.edu/lr4631/235/game/" target="_blank" rel="noopener noreferrer"><img class = "Homework" src = "images/dig-dug.png" alt = "Dig Dug"></a>
         <br>
-        <a href="https://people.rit.edu/lr4631/235/game/" target="_blank" rel="noopener noreferrer"><img class = "Homework" src = "images/AliceKnife.jpg" alt = "Alice: Madness Returns"></a>
+        <a href="https://people.rit.edu/lr4631/235/AliceMadnessReturns/" target="_blank" rel="noopener noreferrer"><img class = "Homework" src = "images/AliceKnife.jpg" alt = "Alice: Madness Returns"></a>
         
         <h2>AI Generated Music I've Made</h2>
         <p>This is just for fun since I want to test out some more things and need a second class for my stylesheet to reference. Click the link to download a funky fresh (honestly kind of stale) sample of some AI Generated music!</p>
