--- a/DesignToSpecAssets/index.html
+++ b/DesignToSpecAssets/index.html
@@ -19,9 +19,9 @@
         <div class = "left">
         <h2>The Oak Tree</h2>
         <p>
-            The tree is the base component used to make all wood items. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus odit nisi, sequi ipsam illo magni enim recusandae! Vero qui architecto eveniet accusantium ipsam explicabo totam, quia minus odio, rerum molestias dolorem. <br><br>
-            Autem libero odit possimus incidunt nulla fugiat non labore error, voluptate facere recusandae! Expedita magni optio sint repudiandae eaque voluptatum ea doloribus non recusandae aut, blanditiis, veritatis dolor. Dicta, fugiat est error eum beatae sunt non perspiciatis sit reiciendis voluptate eligendi. Molestias officia dicta autem, libero eius provident ullam deleniti quas, non nemo, aliquid pariatur quod inventore labore! Quo, voluptas aliquam! Cum, ex vitae ipsam numquam incidunt, dicta harum et, eum suscipit eligendi totam tenetur. Sequi autem ipsum, voluptas pariatur quibusdam debitis quas! Unde in repellat eum molestiae labore voluptates incidunt eveniet provident. <br><br>
-            Est, odit? Asperiores esse vitae, adipisci recusandae et aliquid exercitationem error commodi eligendi? Sed, dolorum, qui pariatur similique est consequuntur ullam, corporis praesentium illum facere nobis labore nam animi blanditiis alias. Repellat veniam odio eligendi! Itaque officiis cum modi iusto sed nesciunt.
+            The tree is the base component used to make all wood items. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus odit nisi, sequi ipsam illo magni enim recusandae!<br><br>
+            Autem libero odit possimus incidunt nulla fugiat non labore error, voluptate facere recusandae! Expedita magni optio sint repudiandae eaque voluptatum ea doloribus non recusandae aut, blanditiis, veritatis dolor. Dicta, fugiat est error eum beatae sunt non perspiciatis sit reiciendis voluptate eligendi. Molestias officia dicta autem, libero eius provident ullam deleniti quas, non nemo, aliquid pariatur quod inventore labore! Quo, voluptas aliquam!  <br><br>
+            Est, odit? Asperiores esse vitae, adipisci recusandae et aliquid exercitationem error commodi eligendi? Sed, dolorum, qui pariatur similique est consequuntur ullam, corporis praesentium illum facere.
         </p>
         </div>
         <div class = "right">
