--- a/DesignToSpecAssets/index.html
+++ b/DesignToSpecAssets/index.html
@@ -19,8 +19,8 @@
         <div class = "left">
         <h2>The Oak Tree</h2>
         <p>
-            The tree is the base component used to make all wood items. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus odit nisi, sequi ipsam illo magni enim recusandae!<br><br>
-            Autem libero odit possimus incidunt nulla fugiat non labore error, voluptate facere recusandae! Expedita magni optio sint repudiandae eaque voluptatum ea doloribus non recusandae aut, blanditiis, veritatis dolor. Dicta, fugiat est error eum beatae sunt non perspiciatis sit reiciendis voluptate eligendi. Molestias officia dicta autem, libero eius provident ullam deleniti quas, non nemo, aliquid pariatur quod inventore labore! Quo, voluptas aliquam!  <br><br>
+            The tree is the base component used to make all wood items. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus odit nisi, sequi ipsam illo magni enim recusandae! A met. <br><br>
+            Autem libero odit possimus incidunt nulla fugiat non labore error, voluptate facere recusandae! Expedita magni optio sint repudiandae eaque voluptatum ea doloribus non recusandae aut, blanditiis, veritatis dolor. Dicta, fugiat est error eum beatae sunt non perspiciatis sit reiciendis voluptate eligendi. Dicta, fugiat est error eum beatae sunt non perspiciatis sit reiciendis voluptate eligendi. Fugiat est error eum. Libero eius provident ullam deleniti quas, non nemo, aliquid pariatur quod inventore! <br><br>
             Est, odit? Asperiores esse vitae, adipisci recusandae et aliquid exercitationem error commodi eligendi? Sed, dolorum, qui pariatur similique est consequuntur ullam, corporis praesentium illum facere.Lorem ipsum dolor sit, amet consectetur adipisicing elit.
         </p>
         </div>
@@ -38,37 +38,45 @@
                 <h3>Planks</h3>
                 <img src="Assets/planks.png" alt = "Minecraft planks">
             </div>
-            <p id = "descriptor">
-                Planks are one of the key ingredients that can be created from wood. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt corporis quia cum nisi neque assumenda? <br>
-                Hic repellat fuga explicabo. Quis!
-            </p>
+            <div id = "descriptor">
+                <p>
+                    Planks are one of the key ingredients that can be created from wood. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt corporis quia cum nisi neque assumenda? <br><br>
+                    Hic repellat fuga explicabo. Quis!
+                </p>
+            </div>
         </div>
         <div class = "stick">
             <div class = "craf">
                 <h3>Sticks</h3>
                 <img src="Assets/stick.png" alt = "Minecraft stick">
             </div>
-            <p id = "descriptor">
-                Sticks are pretty neat! Lorem ipsum dolor sit amet consectetur adipisicing elit.<br> Recusandae sapiente voluptate esse consequuntur velit alias ab corporis, adipisci animi fugit.
-            </p>
+            <div id = "descriptor">
+                <p>
+                Sticks are pretty neat! Lorem ipsum dolor sit amet consectetur adipisicing elit.<br><br> Recusandae sapiente voluptate esse consequuntur velit alias ab corporis, adipisci animi fugit.
+                </p>
+            </div>
         </div>
         <div class = "chest">
             <div class = "craf">
                 <h3>Chests</h3>
                 <img src="Assets/chest.png" alt = "Minecraft chest">
             </div>
-            <p id = "descriptor">
-                Chests are one of the few items in the game that can combines with some other item! Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus, natus.
-            </p>
+            <div id = "descriptor">
+                <p>
+                Chests are one of the few items in the game that can combines with some other item! Lorem ipsum dolor sit amet consectetur adipisicing elit. <br><br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus, natus.
+                </p>
+            </div>
         </div>
         <div class = "stairs">
             <div class = "craf">
                 <h3>Stairs</h3>
                 <img src="Assets/stairs.png" alt = "Minecraft stairs">
             </div>
-            <p id = "descriptor">
-                Stairs are one of the few items in the game that let the plater change elevation without jumping! Lorem ipsum, dolor sit amet. <br> Lorem ipsum dolor sit amet. Sunt rerum ea vero! Molestias, commodi delectus.
-            </p>
+            <div id = "descriptor">
+                <p>
+                Stairs are one of the few items in the game that let the plater change elevation without jumping! Lorem ipsum, dolor sit amet. <br><br> Lorem ipsum dolor sit amet. Sunt rerum ea vero! Molestias, commodi delectus.
+                </p>
+            </div>
         </div>
     </section>
     <footer>
