--- a/DesignToSpecAssets/index.html
+++ b/DesignToSpecAssets/index.html
@@ -38,7 +38,7 @@
                 <h3>Planks</h3>
                 <img src="Assets/planks.png" alt = "Minecraft planks">
             </div>
-            <div id = "descriptor">
+            <div class = "descriptor">
                 <p>
                     Planks are one of the key ingredients that can be created from wood. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Incidunt corporis quia cum nisi neque assumenda? <br><br>
                     Hic repellat fuga explicabo. Quis!
@@ -50,7 +50,7 @@
                 <h3>Sticks</h3>
                 <img src="Assets/stick.png" alt = "Minecraft stick">
             </div>
-            <div id = "descriptor">
+            <div class = "descriptor">
                 <p>
                 Sticks are pretty neat! Lorem ipsum dolor sit amet consectetur adipisicing elit.<br><br> Recusandae sapiente voluptate esse consequuntur velit alias ab corporis, adipisci animi fugit.
                 </p>
@@ -61,7 +61,7 @@
                 <h3>Chests</h3>
                 <img src="Assets/chest.png" alt = "Minecraft chest">
             </div>
-            <div id = "descriptor">
+            <div class = "descriptor">
                 <p>
                 Chests are one of the few items in the game that can combines with some other item! Lorem ipsum dolor sit amet consectetur adipisicing elit. <br><br> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Minus, natus.
                 </p>
@@ -72,7 +72,7 @@
                 <h3>Stairs</h3>
                 <img src="Assets/stairs.png" alt = "Minecraft stairs">
             </div>
-            <div id = "descriptor">
+            <div class = "descriptor">
                 <p>
                 Stairs are one of the few items in the game that let the plater change elevation without jumping! Lorem ipsum, dolor sit amet. <br><br> Lorem ipsum dolor sit amet. Sunt rerum ea vero! Molestias, commodi delectus.
                 </p>
