--- a/project1/index.html
+++ b/project1/index.html
@@ -41,6 +41,7 @@
     </div>
 
     <div id="about">
+        
         <img src = "media/Ready.jpg" alt = "Lilian Ready">
         <h2>About Me</h2>
         <p>I'm a Game Developer and Computer Programmer from just about everywhere in Colorado. I started learning to code in sixth grade (when I was allowed to buy my first video game) and haven't left either alone since. I was lucky enough to be able to teach and tutor kids in Unity over the summer and be the same positive influence in programming that my teachers were to me at that age.<br><br>As a current student of RIT I'm pursuing my bachelor's degree in both Game Design and Development and Computer Science. I've really enjoyed the opportunity to expand my skills out into all the fields that go into making a game, from project management and programming to animation. <br><br>Outside of class I'm an active member of Computer Science House, and love to go to the various seminars and events happening every night. CSH has been a huge part of my experience at RIT and they've really encouraged me to branch out past class assignments and to pursue my own interests and projects. I'll always be grateful that I'm able to immediately reach out to a community that can tell me exactly why I'll need a stronger motor than a hex bug's to get a furby to walk.</p>
@@ -49,21 +50,24 @@
     <div id="progress">
         <h2>Projects In Progress</h2>
         <h4>These are projects that are still in the planning or just beginning  the development phase, come take a look at what I'm working on now!</h4>
-        <div class="project">
-            <a href="https://placeholder.com"><img src="https://via.placeholder.com/400x300"></a>
-            <h3>Mega-Furby</h3>
-            <p>I would really love to expand on this one it's my pet project right now but I haven't had much time to work on it so it's nothing stellar yet. Ipsum eum natus fugiat aut! Laboriosam consequuntur veritatis adipisci sint nulla, quae maxime suscipit placeat tenetur sed eaque recusandae voluptatem voluptate consequatur, fugit nostrum sapiente veniam iusto. Facilis, consequuntur provident quo, mollitia praesentium autem iure vel, vero ipsum cupiditate libero itaque hic?</p>
+        <div id = "projectProg">
+            <div class="project">
+                <a href="https://placeholder.com"><img src="https://via.placeholder.com/400x300"></a>
+                <h3>Mega-Furby</h3>
+                <p>I would really love to expand on this one it's my pet project right now but I haven't had much time to work on it so it's nothing stellar yet. Ipsum eum natus fugiat aut! Laboriosam consequuntur veritatis adipisci sint nulla, quae maxime suscipit placeat tenetur sed eaque recusandae voluptatem voluptate consequatur, fugit nostrum sapiente veniam iusto. Facilis, consequuntur provident quo, mollitia praesentium autem iure vel, vero ipsum cupiditate libero itaque hic?</p>
+            </div>
+            <div class="project">
+                <a href="https://placeholder.com"><img src="https://via.placeholder.com/400x300"></a>
+                <h3>Devcade</h3>
+                <p>This one's a CSH project and my first time using React. I'm the only person on front end so we're going to see how this goes. Ipsum eum natus fugiat aut! Laboriosam consequuntur veritatis adipisci sint nulla, quae maxime suscipit placeat tenetur sed eaque recusandae voluptatem voluptate consequatur, fugit nostrum sapiente veniam iusto. Facilis, consequuntur provident quo, mollitia praesentium autem iure vel, vero ipsum cupiditate libero itaque hic?</p>
+            </div>
+            <div class="project">
+                <a href="https://placeholder.com"><img src="https://via.placeholder.com/400x300"></a>
+                <h3>Starfall</h3>
+                <p>This one was a class project and is now the reason why I don't have any Git commits over the summer. I really love the idea I've got for this game's combat system and put any spare time I had this summer into getting the basics of this working so I can have a demo! Ipsum eum natus fugiat aut! Laboriosam consequuntur veritatis adipisci sint nulla, quae maxime suscipit placeat tenetur sed eaque recusandae voluptatem voluptate consequatur, fugit nostrum sapiente veniam iusto. Facilis, consequuntur provident quo, mollitia praesentium autem iure vel, vero ipsum cupiditate libero itaque hic?</p>
+            </div>
         </div>
-        <div class="project">
-            <a href="https://placeholder.com"><img src="https://via.placeholder.com/400x300"></a>
-            <h3>Devcade</h3>
-            <p>This one's a CSH project and my first time using React. I'm the only person on front end so we're going to see how this goes. Ipsum eum natus fugiat aut! Laboriosam consequuntur veritatis adipisci sint nulla, quae maxime suscipit placeat tenetur sed eaque recusandae voluptatem voluptate consequatur, fugit nostrum sapiente veniam iusto. Facilis, consequuntur provident quo, mollitia praesentium autem iure vel, vero ipsum cupiditate libero itaque hic?</p>
-        </div>
-        <div class="project">
-            <a href="https://placeholder.com"><img src="https://via.placeholder.com/400x300"></a>
-            <h3>Starfall</h3>
-            <p>This one was a class project and is now the reason why I don't have any Git commits over the summer. I really love the idea I've got for this game's combat system and put any spare time I had this summer into getting the basics of this working so I can have a demo! Ipsum eum natus fugiat aut! Laboriosam consequuntur veritatis adipisci sint nulla, quae maxime suscipit placeat tenetur sed eaque recusandae voluptatem voluptate consequatur, fugit nostrum sapiente veniam iusto. Facilis, consequuntur provident quo, mollitia praesentium autem iure vel, vero ipsum cupiditate libero itaque hic?</p>
-        </div>
+        
     </div>
     <div id="external">
         <ul>
