--- a/project1/index.html
+++ b/project1/index.html
@@ -26,8 +26,8 @@
         
         <div class="project">
             <a href="https://placeholder.com"><img src="https://via.placeholder.com/400x300"></a>
-            <h2>Project Hubris</h2>
-            <p>So I know that we're not supposed to use bootstrap but I really like the idea of slides here so I'm going to try and program it without using bootstrap. I really shouldn't be since I've got other equally pressing and as of right now more demanding projects for other classes but I really want slides so I'm doing it anyway! Ipsum eum natus fugiat aut! Laboriosam consequuntur veritatis adipisci sint nulla, quae maxime suscipit placeat tenetur sed eaque recusandae voluptatem voluptate consequatur, fugit nostrum sapiente veniam iusto. Facilis, consequuntur provident quo, mollitia praesentium autem iure vel, vero ipsum cupiditate libero itaque hic?</p>
+            <h2>BeeGame</h2>
+            <p>A barebones set up of a bee-based dating game. This project was created independantly as part of Wichack, a 24-hour hackathon. BeeGame is an educational dating game with the goal of encouraging people to learn about the various native (and invasive) bees of North America. Adding a base-building aspect to the standard dating game format, you'll have to choose not only the correct option to charm the various bees, but tend to your garden and provide the habitat the various bees prefer. </p>
         </div>
         <div class="projectvar">
             <a href="https://placeholder.com"><img src="https://via.placeholder.com/400x300"></a>
@@ -36,7 +36,7 @@
         </div>
         <div class="project">
             <a href="https://placeholder.com"><img src="https://via.placeholder.com/400x300"></a>
-            <h2>Hackathons</h2>
+            <h2>Tater Tots</h2>
             <p>Ideally I want to change "New Projects" to "Projects" and have a separate webpage with the projects separated into complete, hackathon, and projects in progress. It gives some context to why some have so few commits. Ipsum eum natus fugiat aut! Laboriosam consequuntur veritatis adipisci sint nulla, quae maxime suscipit placeat tenetur sed eaque recusandae voluptatem voluptate consequatur, fugit nostrum sapiente veniam iusto. Facilis, consequuntur provident quo, mollitia praesentium autem iure vel, vero ipsum cupiditate libero itaque hic?</p>
         </div>
     </div>
