--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -26,7 +26,7 @@
 
         <h2>Projects</h2>
         <ol>
-            <li><a href = https://people.rit.edu/lr4631/235/portfolio target="_blank" rel="noopener noreferrer">Portfolio</a></li>
+            <li><a href = https://people.rit.edu/lr4631/235/project1 target="_blank" rel="noopener noreferrer">Portfolio</a></li>
             <li><a href = https://people.rit.edu/lr4631/235/webservice target="_blank" rel="noopener noreferrer">Web Service Application</a></li>
             <li><a href = https://people.rit.edu/lr4631/235/intgame target="_blank" rel="noopener noreferrer">Interactive Game</a></li>
         </ol>
