--- a/webapptutorials/web-apps-lab-7.html
+++ b/webapptutorials/web-apps-lab-7.html
@@ -22,7 +22,8 @@
          */
         window.onload = function () {
             makeSampleMonsters();
-            showMonsters();
+            showMonsters('Goomba','#goombas');
+            showMonsters('Boo','#boos');
         }
 
         /**
@@ -38,13 +39,35 @@
             monsters.push(monster);
             monster = makeGoomba("Alice", 40, 150, 200);
             monsters.push(monster);
+            monster = makeBoo("King Boo", 100,5,1000);
+            monsters.push(monster);
+            monster = makeBoo("Spookums", 5,50,10);
+            monsters.push(monster);
+            monster = makeBoo("MaGookums", 20,10,100);
+            monsters.push(monster);
         }
 
         /**
          * Function that shows our monsters (just Goombas for now)
          * 
          */
-        function showMonsters() {
+        function showMonsters(monsterType, monsterTag) {
+            let monsterList = document.querySelector(monsterTag);
+
+            for (let i = 0; i < monsters.length; i++) {
+                let liStr = "";
+                let li = document.createElement("li");
+
+                for (let key in monsters[i]) {
+                    //If not a function and the correct type, add it to the list and add to html
+                    if (typeof monsters[i][key] !== "function" && monsters[i]["type"]==monsterType) {
+                        liStr += `<b>${key}:</b> ${monsters[i][key]}<br />`;
+                        li.innerHTML = liStr;
+                        monsterList.appendChild(li);
+                    }
+                }
+            }
+            /*
             let goombaList = document.querySelector("#goombas");
 
             for (let i = 0; i < monsters.length; i++) {
@@ -59,6 +82,7 @@
                 li.innerHTML = liStr;
                 goombaList.appendChild(li);
             }
+            */
         }
 
         /**
@@ -71,8 +95,9 @@
                 hp: 100,
                 speed: 10,
                 score: 100,
+                type:"",
                 status: function () {
-                    console.log("name: " + this.name + ", hp: " + this.hp + ", speed: " + this.speed + ", score: " + this.score);
+                    console.log("name: " + this.name + ", hp: " + this.hp + ", speed: " + this.speed + ", score: " + this.score + ", type: " + type);
                 }
             }
         }
@@ -87,6 +112,7 @@
             goomba.hp = hp;
             goomba.speed = speed;
             goomba.score = score;
+            goomba.type = "Goomba";
             goomba.takeDamage = function (dmgVal) {
                 goomba.hp -= dmgVal;
             }
@@ -95,7 +121,22 @@
             Object.seal(goomba);
             return goomba;
         }
+        //Make a Boo
+        function makeBoo(name, hp, speed, score) {
+            let boo = createBaseMonster();
+            boo.name = name;
+            boo.hp = hp;
+            boo.speed = speed;
+            boo.score = score;
+            boo.type = "Boo";
+            boo.takeDamage = function (dmgVal) {
+                boo.hp -= dmgVal;
+            }
+            boo.powerUp = powerUp;
 
+            Object.seal(boo);
+            return boo;
+        }
         /**
          * Function that can be used inside a monster object.
          * 
@@ -113,6 +154,9 @@
     <div id="lineUp">
         <h1>Goombas</h1>
         <ul id="goombas">
+        </ul>
+        <h1>Boos</h1>
+        <ul id="boos">
         </ul>
     </div>
 </body>
