--- a/project2/index.html
+++ b/project2/index.html
@@ -8,7 +8,8 @@
     <script src = "js/main.js"></script>
 </head>
 <body>
-    <!--Proof of ability, just showing access to picture of the day-->
+    <!--Proof of ability, just showing access to picture of the day, geolocation and sunrise-sunset-->
+    <p id="location">Sunrise and sunset could not be found</p>
     <div id="pod">
         <p>No picture today</p>
     </div>
