--- a/project2/index.html
+++ b/project2/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Daily Astronomy</title>
+    <link rel = "stylesheet" href="css/mainstyle.css">
     <script src = "js/main.js"></script>
 </head>
 <body>
     <!--Proof of ability, just showing access to picture of the day, geolocation and sunrise-sunset-->
-    <p id="location">Sunrise and sunset could not be found</p>
+    <div id="location">
+        Sunrise and sunset could not be found.
+    </div>
     <div id="pod">
         <p>No picture today</p>
     </div>
