--- a/project2/index.html
+++ b/project2/index.html
@@ -10,11 +10,15 @@
 </head>
 <body>
     <!--Proof of ability, just showing access to picture of the day, geolocation and sunrise-sunset-->
-    <div id="location">
-        Sunrise and sunset could not be found.
-    </div>
+    <h1>NASAtronomy Of The Day</h1>
+    <div id="calendar">askdhaksjdkaj</div>
     <div id="pod">
         <p>No picture today</p>
     </div>
+    <div id="location">
+        Sunrise and sunset could not be found.
+    </div>
+    <div id="description">BLAJDLKAJDLS</div>
+    <footer>Sourcessssss</footer>
 </body>
 </html>
