--- a/project2/index.html
+++ b/project2/index.html
@@ -10,8 +10,13 @@
 </head>
 <body>
     <!--Proof of ability, just showing access to picture of the day, geolocation and sunrise-sunset-->
-    <h1>NASAtronomy Of The Day</h1>
+    <header><h1>NASAtronomy Of The Day</h1></header>
+    
     <div id="calendar">askdhaksjdkaj</div>
+    <!--Calander set up-->
+
+
+
     <div id="pod">
         <p>No picture today</p>
     </div>
