--- a/project2/index.html
+++ b/project2/index.html
@@ -20,10 +20,8 @@
     <!--Calander set up-->
     <div id="calendar">
         Pick a new date? <br>
-        <input type="text" id="datepicker">
+        <input type="date" id = "inputCal">
     </div>
-
-
     <div id="pod">
         <p>No picture today</p>
     </div>
