location input working

--- a/project2/index.html
+++ b/project2/index.html
@@ -28,6 +28,12 @@
         Sunrise and sunset could not be found.
     </div>
     <div id="description">BLAJDLKAJDLS</div>
-    <footer>Sourcessssss</footer>
+    <footer>Sources, no links for now working on interaction
+        <ul>
+            <li>https://sunrise-sunset.org/api</li>
+            <li>https://data.nasa.gov/Space-Science/Astronomy-Picture-of-the-Day-API/ez2w-t8ua</li>
+            <li>https://developer.mozilla.org/en-US/docs/Web/API/Navigator</li>
+        </ul>
+    </footer>
 </body>
 </html>
