--- a/project2/index.html
+++ b/project2/index.html
@@ -11,6 +11,7 @@
     <!--Datepicker-->
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
+    <!--Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
@@ -37,14 +38,6 @@
         <div id="description">BLAJDLKAJDLS</div>
     </div>
     
-    <footer>Sources, no links for now working on interaction
-        <ul>
-            <li>https://sunrise-sunset.org/api</li>
-            <li>https://data.nasa.gov/Space-Science/Astronomy-Picture-of-the-Day-API/ez2w-t8ua</li>
-            <li>https://developer.mozilla.org/en-US/docs/Web/API/Navigator</li>
-            <li>https://icon-icons.com/icon/ufo-flying-saucer-space/60256</li>
-            <li>https://nasa.github.io/nasawds-site/components/typography/</li>
-        </ul>
-    </footer>
+    <footer><h3><a href="documentation.html">Documentation Page</a></h3></footer>
 </body>
 </html>
