--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -27,7 +27,7 @@
         <h2>Projects</h2>
         <ol>
             <li><a href = https://people.rit.edu/lr4631/235/project1 target="_blank" rel="noopener noreferrer">Portfolio</a></li>
-            <li><a href = https://people.rit.edu/lr4631/235/webservice target="_blank" rel="noopener noreferrer">Web Service Application</a></li>
+            <li><a href = https://people.rit.edu/lr4631/235/project2 target="_blank" rel="noopener noreferrer">NASAtronomy Of The Day</a></li>
             <li><a href = https://people.rit.edu/lr4631/235/intgame target="_blank" rel="noopener noreferrer">Interactive Game</a></li>
         </ol>
         <h2>Homework and Exercises</h2>
