--- a/project1/index.html
+++ b/project1/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Lilian Ready</title>
     <link rel="stylesheet" href = "css/yourCSSfile.css">
     <!--Font Awesome-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -30,10 +30,10 @@
             <h2>BeeGame</h2>
             <p>A barebones set up of a bee-based dating game. This project was created independantly as part of Wichack, a 24-hour hackathon. BeeGame is an educational dating game with the goal of encouraging people to learn about the various native (and invasive) bees of North America. Adding a base-building aspect to the standard dating game format, you'll have to choose not only the correct option to charm the various bees, but tend to your garden and provide the habitat the various bees prefer. </p>
         </div>
-        <div class="projectvar">
+        <div class="project">
             <a href="https://placeholder.com"><img src="https://via.placeholder.com/400x300" alt = "placeholder image"></a>
             <h2>Music Generator</h2>
-            <p>So I know that we're not supposed to use bootstrap but I really like the idea of slides here so I'm going to try and program it without using bootstrap. I really shouldn't be since I've got other equally pressing and as of right now more demanding projects for other classes but I really want slides so I'm doing it anyway! Ipsum eum natus fugiat aut! Laboriosam consequuntur veritatis adipisci sint nulla, quae maxime suscipit placeat tenetur sed eaque recusandae voluptatem voluptate consequatur, fugit nostrum sapiente veniam iusto. Facilis, consequuntur provident quo, mollitia praesentium autem iure vel, vero ipsum cupiditate libero itaque hic?</p>
+            <p>Music Generator was my major project for CSH my freshman year of college. I didn't know any python or anything about AI other than that I wanted to make one. I used Google Collab to create a music generator based on the Magenta AI library. It takes a series of MIDI files, translates them into note sequences (the notes we hear but represented mathematically) and runs them through the trained model. This creates an average of the two songs, creating a new song. It does this untl every midi file is combined down to one song (like a ranked competition). This creates a new song that sounds not-quite familiar, and fits in with the rest of the midis (mostly).</p>
         </div>
         <div class="project">
             <img src="media/projectimg/potato.png" alt = "Home screen of potato game">
@@ -54,9 +54,9 @@
         <h4>These are projects that are still in the planning or just beginning  the development phase, come take a look at what I'm working on now!</h4>
         <div id = "projectProg">
             <div class="project">
-                <a href="https://placeholder.com"><img src="https://via.placeholder.com/400x300" alt = "placeholder image"></a>
+                <img src = "media/projectimg/furb-wired.jpg" alt="Furby beng deconstructed">
                 <h3>Mega-Furby</h3>
-                <p>I would really love to expand on this one it's my pet project right now but I haven't had much time to work on it so it's nothing stellar yet. Ipsum eum natus fugiat aut! Laboriosam consequuntur veritatis adipisci sint nulla, quae maxime suscipit placeat tenetur sed eaque recusandae voluptatem voluptate consequatur, fugit nostrum sapiente veniam iusto. Facilis, consequuntur provident quo, mollitia praesentium autem iure vel, vero ipsum cupiditate libero itaque hic?</p>
+                <p>I would really love to expand on this one it's my pet project right now but I haven't had much time to work on it so it's nothing stellar yet. At a CSH hackathon I was able to put aside the time to start taking apart and cataloging the pieces of the furby, ensuring that I could take it apart and put it back together. Since the majority of this kind of furby are held by collectors, there aren't many guides on what each part does. Turning the furby on while the shell is removed and figuring out what each piece does through interaction takes a while but has been very informative. Once I have the basics down of how the furby works, I can begin redoing it the way I'd like, starting with creating an AI that can go from speaking only Furbish to English through interaction.</p>
             </div>
             <div class="project">
                 <a href="https://placeholder.com"><img src="https://via.placeholder.com/400x300" alt = "placeholder image"></a>
