--- a/project1/index.html
+++ b/project1/index.html
@@ -31,7 +31,7 @@
             <p>A barebones set up of a bee-based dating game. This project was created independantly as part of Wichack, a 24-hour hackathon. BeeGame is an educational dating game with the goal of encouraging people to learn about the various native (and invasive) bees of North America. Adding a base-building aspect to the standard dating game format, you'll have to choose not only the correct option to charm the various bees, but tend to your garden and provide the habitat the various bees prefer. </p>
         </div>
         <div class="project">
-            <a href="https://placeholder.com"><img src="https://via.placeholder.com/400x300" alt = "placeholder image"></a>
+            <img src="media/projectimg/Clef.png" alt = "Treble and Alto music bars"></a>
             <h2>Music Generator</h2>
             <p>Music Generator was my major project for CSH my freshman year of college. I didn't know any python or anything about AI other than that I wanted to make one. I used Google Collab to create a music generator based on the Magenta AI library. It takes a series of MIDI files, translates them into note sequences (the notes we hear but represented mathematically) and runs them through the trained model. This creates an average of the two songs, creating a new song. It does this untl every midi file is combined down to one song (like a ranked competition). This creates a new song that sounds not-quite familiar, and fits in with the rest of the midis (mostly).</p>
         </div>
@@ -59,7 +59,7 @@
                 <p>I would really love to expand on this one it's my pet project right now but I haven't had much time to work on it so it's nothing stellar yet. At a CSH hackathon I was able to put aside the time to start taking apart and cataloging the pieces of the furby, ensuring that I could take it apart and put it back together. Since the majority of this kind of furby are held by collectors, there aren't many guides on what each part does. Turning the furby on while the shell is removed and figuring out what each piece does through interaction takes a while but has been very informative. Once I have the basics down of how the furby works, I can begin redoing it the way I'd like, starting with creating an AI that can go from speaking only Furbish to English through interaction.</p>
             </div>
             <div class="project">
-                <a href="https://placeholder.com"><img src="https://via.placeholder.com/400x300" alt = "placeholder image"></a>
+                <img src="media/projectimg/CSH.png" alt = "Computer Science House logo"></a>
                 <h3>Devcade</h3>
                 <p>This one's a CSH project and my first time using React. Devcade as a project seeks to create an arcade cabinet with cloud capability. People will be able to upload their games to the Devcade server through our website (that's what I'm in charge of making). Then, on the cabinet download those games to play, and save your personal file to your account with the website. As of right now there are four teams in charge of the separate aspects of the cabinet, and as a part of the website team I'll be the front end person, with my two teammates working server-side.</p>
             </div>
