--- a/project3/index.html
+++ b/project3/index.html
@@ -2,12 +2,8 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8" />
-	<title>Circle Blast!</title>
-	<style>
-	body{
-		cursor: url(images/move.png) 8 8,crosshair;
-	}
-	</style>
+	<title>Luck of the Draw</title>
+    <link rel="stylesheet" href="css/mainstyle.css"> 
 </head>
 <body>
 <!-- External libraries -->
@@ -18,7 +14,7 @@
 <!--  https://github.com/goldfire/howler.js -->
 
 
-	<script src="js/utilities.js"></script>
+<!-- My JS files -->
 	<script src="js/classes.js"></script>
 	<script src="js/main.js"></script>
 </body>
