--- a/project3/index.html
+++ b/project3/index.html
@@ -17,5 +17,6 @@
 <!-- My JS files -->
 	<script src="js/classes.js"></script>
 	<script src="js/main.js"></script>
+	<script src ="js/utlilities.js"></script>
 </body>
 </html>
