--- a/project3/index.html
+++ b/project3/index.html
@@ -6,8 +6,13 @@
     <link rel="stylesheet" href="css/mainstyle.css"> 
 </head>
 <body>
+
+	<h1>Luck of the Draw!</h1>
+	<div id="draw"></div>
+	<div id="buttons"></div>
 <!-- External libraries -->
 	<script src ="https://pixijs.download/release/pixi.min.js"></script>
+	<script src="https://pixijs.download/release/packages/graphics-extras.min.js"></script>
 	<script src ="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 <!-- https://github.com/pixijs/pixi.js?utm_source=html5weekly -->
 
