Adding instruction page

--- a/project3/index.html
+++ b/project3/index.html
@@ -4,12 +4,17 @@
 	<meta charset="utf-8" />
 	<title>Luck of the Draw</title>
     <link rel="stylesheet" href="css/mainstyle.css"> 
+	<!--Fonts-->
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
 	<h1>Luck of the Draw!</h1>
 	<div id="draw"></div>
 	<div id="buttons"></div>
+	<div id ="photobank"></div>
 <!-- External libraries -->
 	<script src ="https://pixijs.download/release/pixi.min.js"></script>
 	<script src="https://pixijs.download/release/packages/graphics-extras.min.js"></script>
