Picture in progress

--- a/project3/index.html
+++ b/project3/index.html
@@ -18,6 +18,7 @@
 <!-- External libraries -->
 	<script src ="https://pixijs.download/release/pixi.min.js"></script>
 	<script src="https://pixijs.download/release/packages/graphics-extras.min.js"></script>
+	<script src="https://pixijs.download/release/packages/extract.min.js"></script>
 	<script src ="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 <!-- https://github.com/pixijs/pixi.js?utm_source=html5weekly -->
 
