--- a/project3/index.html
+++ b/project3/index.html
@@ -8,16 +8,22 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
-	<h1>Luck of the Draw!</h1>
+	<!--<h1>Luck of the Draw!</h1>-->
+	<p id="word"></p>
 	<div id="draw"></div>
 	<div id="buttons"></div>
 	<div id ="photobank"></div>
+	Sources for documentation:
+	words from: <a href="https://random-word-form.herokuapp.com/">Random Word Generator</a>
+	button styles from <a href="https://www.iwm-tuebingen.de/iwmbrowser/lib/pixi/button.html">This tutorial</a>
 <!-- External libraries -->
 	<script src ="https://pixijs.download/release/pixi.min.js"></script>
 	<script src="https://pixijs.download/release/packages/graphics-extras.min.js"></script>
+	<script src="https://pixijs.download/release/packages/canvas-extract.min.js"></script>
 	<script src="https://pixijs.download/release/packages/extract.min.js"></script>
 	<script src ="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
 <!-- https://github.com/pixijs/pixi.js?utm_source=html5weekly -->
