messed up merge

--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -28,7 +28,7 @@
         <ol>
             <li><a href = https://people.rit.edu/lr4631/235/project1 target="_blank" rel="noopener noreferrer">Portfolio</a></li>
             <li><a href = https://people.rit.edu/lr4631/235/project2 target="_blank" rel="noopener noreferrer">NASAtronomy Of The Day</a></li>
-            <li><a href = https://people.rit.edu/lr4631/235/intgame target="_blank" rel="noopener noreferrer">Interactive Game</a></li>
+            <li><a href = https://people.rit.edu/lr4631/235/project3 target="_blank" rel="noopener noreferrer">Interactive Game</a></li>
         </ol>
         <h2>Homework and Exercises</h2>
         
