Sound added and screenshots working

--- a/project3/index.html
+++ b/project3/index.html
@@ -12,14 +12,21 @@
 </head>
 <body>
 
-	<!--<h1>Luck of the Draw!</h1>-->
+	<h1>Luck of the Draw!</h1>
 	<p id="word"></p>
 	<div id="draw"></div>
-	<div id="buttons"></div>
-	<div id ="photobank"></div>
-	Sources for documentation:
+	<div id ="photobank">
+		<h2>Your Gallery!</h2>
+	</div>
+	<footer>
+		Sources for documentation:
 	words from: <a href="https://random-word-form.herokuapp.com/">Random Word Generator</a>
 	button styles from <a href="https://www.iwm-tuebingen.de/iwmbrowser/lib/pixi/button.html">This tutorial</a>
+	sounds from: <a href = "https://freesound.org/people/NXRT/sounds/546602/">Countdown</a>
+	<a href="https://freesound.org/people/joedeshon/sounds/119415/">Switch</a>
+	<a href="https://www.zapsplat.com/">Background music</a>
+	</footer>
+	
 <!-- External libraries -->
 	<script src ="https://pixijs.download/release/pixi.min.js"></script>
 	<script src="https://pixijs.download/release/packages/graphics-extras.min.js"></script>
