--- a/project3/proposal.html
+++ b/project3/proposal.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proposal for Luck of the Draw</title>
-    <link rel="stylesheet" href="css/mainstyle.css"> 
+    <link rel="stylesheet" href="css/propstyle.css"> 
 </head>
 <body>
-    <h1>Luck of the Draw</h1>
+    <h1><a href="index.html">Luck of the Draw</a></h1>
     <h2>High Concept</h2>
     <p>On starting the game the player is presented with a prompt, the player then has 60 seconds to draw their best version of the prompt possible.</p>
     <h2>Genre</h2>
@@ -43,5 +43,21 @@
         Majoring in Game Design and Development and Computer Science<br>
         I'm certified in Adobe Illustrator, and have been programming for around four years. I've been a private tutor for Unity and C# and have been learning C++ and am currently very interested in WebDev.
     </p>
+    <h2>Documentation!</h2>
+    <p>
+        
+    </p>
+    <h3>Sources</h3>
+    I used the noun version of this API: <a href="https://random-word-form.herokuapp.com/">Random Word Generator</a> <br>
+    <h4>Sounds</h4>
+    <ul>
+        <li><a href = "https://freesound.org/people/NXRT/sounds/546602/">Countdown Sound</a></li>
+        <li>
+            <a href="https://freesound.org/people/joedeshon/sounds/119415/">Switch Brush Sound</a>
+        </li>
+        <li>
+            <a href="https://www.zapsplat.com/">Background music</a>
+        </li>
+    </ul>
 </body>
 </html>
