--- a/project3/index.html
+++ b/project3/index.html
@@ -7,40 +7,30 @@
 	<!--Fonts-->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-
-	<h1>Luck of the Draw!</h1>
 	<p id="word"></p>
+	<h1 id="count"></h1>
 	<div id="draw"></div>
 	<div id ="photobank">
-		<h2>Your Gallery!</h2>
+		<h1>Your Gallery!</h1>
 	</div>
 	<footer>
-		Sources for documentation:
-	words from: <a href="https://random-word-form.herokuapp.com/">Random Word Generator</a>
-	button styles from <a href="https://www.iwm-tuebingen.de/iwmbrowser/lib/pixi/button.html">This tutorial</a>
-	sounds from: <a href = "https://freesound.org/people/NXRT/sounds/546602/">Countdown</a>
-	<a href="https://freesound.org/people/joedeshon/sounds/119415/">Switch</a>
-	<a href="https://www.zapsplat.com/">Background music</a>
+		<h2><a href = "proposal.html"><i class="fas fa-file-alt"></i> Documentation</a></h2>
 	</footer>
 	
 <!-- External libraries -->
+	<script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.26/webfont.js"></script>
 	<script src ="https://pixijs.download/release/pixi.min.js"></script>
 	<script src="https://pixijs.download/release/packages/graphics-extras.min.js"></script>
-	<script src="https://pixijs.download/release/packages/canvas-extract.min.js"></script>
-	<script src="https://pixijs.download/release/packages/extract.min.js"></script>
 	<script src ="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.3/howler.min.js"></script>
-<!-- https://github.com/pixijs/pixi.js?utm_source=html5weekly -->
-
-<!--  https://github.com/goldfire/howler.js -->
 
 
 <!-- My JS files -->
 	<script src="js/classes.js"></script>
 	<script src="js/main.js"></script>
 	<script src ="js/utlilities.js"></script>
+	<script src="js/loader.js"></script>
 </body>
 </html>
